// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Image prop "accessibilityLabel" 1`] = `
<img
  aria-label="accessibilityLabel"
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  src="https://google.com/favicon.ico"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "alternativeText" set to empty string 1`] = `
<img
  alt=""
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "alternativeText" set to value 1`] = `
<img
  alt="alternative text"
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "blurRadius" 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  src="https://google.com/favicon.ico"
  style="filter: blur(5px); object-fit: cover;"
/>
`;

exports[`components/Image prop "crossOrigin" sets value 1`] = `
<img
  class="css-image-tcr4mf"
  crossorigin="use-credentials"
  decoding="async"
  draggable="false"
  loading="lazy"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "decoding" sets value 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "defaultSource" does not override "height" and "width" styles 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  src="https://google.com/favicon.ico"
  style="height: 20px; object-fit: cover; width: 40px;"
/>
`;

exports[`components/Image prop "defaultSource" sets "height" and "width" styles if missing 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  src="https://google.com/favicon.ico"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "defaultSource" sets image when value is a string 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  src="https://google.com/favicon.ico"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "defaultSource" sets image when value is an object 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  src="https://google.com/favicon.ico"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "draggable" 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="true"
  loading="lazy"
  src="https://google.com/favicon.ico"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "focusable" 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  style="object-fit: cover;"
  tabindex="0"
/>
`;

exports[`components/Image prop "loading" sets value 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "nativeID" 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  id="nativeID"
  loading="lazy"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "onError" is called when image fails to load and replaces src with placeholder 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "onLoad" is called once when image loads 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  src="https://google.com/favicon.ico"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "resizeMode" value "contain" 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  style="object-fit: contain;"
/>
`;

exports[`components/Image prop "resizeMode" value "cover" 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "resizeMode" value "none" 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  style="object-fit: none;"
/>
`;

exports[`components/Image prop "resizeMode" value "repeat" 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
/>
`;

exports[`components/Image prop "resizeMode" value "stretch" 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  style="object-fit: fill;"
/>
`;

exports[`components/Image prop "resizeMode" value "undefined" 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "source" is correctly updated only when loaded if defaultSource provided 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  src="https://testing.com/fullSize.jpg"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "source" is correctly updated only when loaded if defaultSource provided 2`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  src="https://testing.com/fullSize.jpg"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "source" is correctly updated when missing in initial render 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "source" is not set immediately if the image has not already been loaded 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  src="https://google.com/favicon.ico"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "source" is set immediately if the image has already been loaded 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  src="https://google.com/favicon.ico"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "source" is set immediately if the image has already been loaded 2`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  src="https://google.com/favicon.ico"
  style="object-fit: cover;"
/>
`;

exports[`components/Image prop "source" is set immediately if the image was preloaded 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
>
  <div
    class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
    style="background-image: url(https://yahoo.com/favicon.ico);"
  />
  <img
    alt=""
    class="css-accessibilityImage-9pa8cd"
    draggable="false"
    src="https://yahoo.com/favicon.ico"
  />
</div>
`;

exports[`components/Image prop "style" removes other unsupported View styles 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  style="filter: url('data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\"><filter id=\\"tint\\"><feColorMatrix type=\\"matrix\\" values=\\"0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 1.00 0\\" /></filter></svg>#tint'); object-fit: cover;"
/>
`;

exports[`components/Image prop "style" supports "resizeMode" property 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  style="object-fit: contain;"
/>
`;

exports[`components/Image prop "style" supports "shadow" properties (convert to filter) 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  style="filter: drop-shadow(1px 1px 0px rgba(255,0,0,1.00)); object-fit: cover;"
/>
`;

exports[`components/Image prop "style" supports "tintcolor" property (convert to filter) 1`] = `
<img
  class="css-image-tcr4mf"
  decoding="async"
  draggable="false"
  loading="lazy"
  src="https://google.com/favicon.ico"
  style="filter: url('data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\"><filter id=\\"tint\\"><feColorMatrix type=\\"matrix\\" values=\\"0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 1.00 0\\" /></filter></svg>#tint'); object-fit: cover;"
/>
`;

exports[`components/Image prop "testID" 1`] = `
<img
  class="css-image-tcr4mf"
  data-testid="testID"
  decoding="async"
  draggable="false"
  loading="lazy"
  style="object-fit: cover;"
/>
`;
